  --------------------------  HepMC-2.05.01  --------------------------

2010-01-04  Lynn Garren

      * HepMC/GenEvent.h: add write_cross_section(std::ostream&)
      * src/GenEvent.cc: output the cross section (if it exists) when printing an event
      * src/GenVertex.cc, GenParticle.cc: save and restore output stream state
        when calling print methods
	
      * examples: Calculate Pythia and Herwig cross sections.
        Set the units explicitly.
      * test/testHepMC.cc.in: call write_cross_section()

2009-12-28  Lynn Garren

       * examples/VectorConversion.h: inline the functions

2009-07-08  Lynn Garren

	* HepMC/Flow.h: improve the syntax of the erase() method
	* test/testFlow.cc: adding a test of the Flow class
	see https://savannah.cern.ch/bugs/index.php?52240

  --------------------------  HepMC-2.05.00  --------------------------

2009-05-19  Lynn Garren

	* HepMC/GenCrossSection: new class to contain the generated 
	cross section and cross section error.  This information is
	considered temporary and could change on an event by event basis.
	* write GenCrossSection information with GenEvent whenever the 
	cross section has been set.  
	* GenEvent.h: add pointer to a CrossSection (null by default).

	* examples: add example_PythiaStreamIO.cc,
	which uses streaming I/O and GenCrossSection.

2009-05-07  Lynn Garren

	* GenEvent: add streaming input and output methods:
	std::ostream& write(std::ostream&);
	std::istream& read(std::istream&);
	Add some private methods used by streaming I/O.

2009-04-17  Lynn Garren

	* GenEvent.h, GenVertex.h: explicitly disallow -- iterator operators.

	* IO_GenEvent: add precision() to set output precision (default is 16).
	IO_GenEvent uses the GenEvent streaming input and output operators.
	Many of the protected methods are no longer useful and have been removed.
	
	
	* IO_Exception class added for use when throwing errors.
	If invalid data is encountered when reading an event, input will