@@ -120,8 +120,6 @@ void pythia_out()
 	// Instantiate an IO strategy to write the data to file 
 	HepMC::IO_GenEvent ascii_io("example_MyPythia.dat",std::ios::out);
 	//
-	HepMC::GenCrossSection xs;
-	//
 	//........................................EVENT LOOP
 	for ( int i = 1; i <= 100; i++ ) {
 	    if ( i%50==1 ) std::cout << "Processing Event Number " 
@@ -138,8 +136,7 @@ void pythia_out()
 	    // set number of multi parton interactions
 	    evt->set_mpi( pypars.msti[31-1] );
 	    // set cross section information
-	    xs.set_cross_section( pyint5.xsec[2][0] );
-	    evt->set_cross_section( xs );
+	    evt->set_cross_section( getPythiaCrossSection() );
 	    // write the event out to the ascii files
 	    ascii_io << evt;
 	    // we also need to delete the created event from memory
@@ -170,8 +167,6 @@ void event_selection()
     //........................................HepMC INITIALIZATIONS
     // Instantiate an IO strategy for reading from HEPEVT.
     HepMC::IO_HEPEVT hepevtio;
-    //
-    HepMC::GenCrossSection xs;
     // declare an instance of the event selection predicate
     IsGoodEventMyPythia is_good_event;
     //........................................EVENT LOOP
@@ -190,8 +185,7 @@ void event_selection()
 	// set number of multi parton interactions
 	evt->set_mpi( pypars.msti[31-1] );
 	// set cross section information
-	xs.set_cross_section( pyint5.xsec[2][0] );
-	evt->set_cross_section( xs );
+	evt->set_cross_section( getPythiaCrossSection() );
 	// do event selection
 	if ( is_good_event(evt) ) {
 	    std::cout << "Good Event Number " << i << std::endl;
@@ -262,8 +256,6 @@ void pythia_in_out()
     // Instantiate an IO strategy for reading from HEPEVT.
     HepMC::IO_HEPEVT hepevtio;
     //
-    HepMC::GenCrossSection xs;
-    //
     //........................................define the output scope
     {
 	// Instantial an IO strategy to write the data to file - it uses the 
@@ -281,8 +273,7 @@ void pythia_in_out()
 	    // define the units (Pythia uses GeV and mm)
 	    evt->use_units(HepMC::Units::GEV, HepMC::Units::MM);
 	    // set cross section information
-	    xs.set_cross_section( pyint5.xsec[2][0] );
-	    evt->set_cross_section( xs );
+	    evt->set_cross_section( getPythiaCrossSection() );
 	    // add some information to the event
 	    evt->set_event_number(i);
 	    evt->set_signal_process_id(20);
@@ -338,8 +329,6 @@ void pythia_particle_out()
     // Instantiate an IO strategy for reading from HEPEVT.
     HepMC::IO_HEPEVT hepevtio;
     //
-    HepMC::GenCrossSection xs;
-    //
     { // begin scope of ascii_io
 	// Instantiate an IO strategy to write the data to file 
 	HepMC::IO_AsciiParticles ascii_io("example_PythiaParticle.dat",std::ios::out);
@@ -355,8 +344,7 @@ void pythia_particle_out()
 	    // define the units (Pythia uses GeV and mm)
 	    evt->use_units(HepMC::Units::GEV, HepMC::Units::MM);
 	    // set cross section information
-	    xs.set_cross_section( pyint5.xsec[2][0] );
-	    evt->set_cross_section( xs );
+	    evt->set_cross_section( getPythiaCrossSection() );
 	    // add some information to the event
 	    evt->set_event_number(i);
 	    evt->set_signal_process_id(20);
