@@ -38,8 +38,6 @@ int main() {
     // Instantiate an IO strategy for reading from HEPEVT.
     HepMC::IO_HEPEVT hepevtio;
     //
-    HepMC::GenCrossSection xs;
-    //
     //........................................EVENT LOOP
     for ( int i = 1; i <= 100; i++ ) {
 	if ( i%50==1 ) std::cout << "Processing Event Number " 
@@ -53,8 +51,7 @@ int main() {
 	// set number of multi parton interactions
 	evt->set_mpi( pypars.msti[31-1] );
 	// set cross section information
-	xs.set_cross_section( pyint5.xsec[2][0] );
-	evt->set_cross_section( xs );
+	evt->set_cross_section( getPythiaCrossSection() );
 	//
 	//.......................USER WOULD PROCESS EVENT HERE
 	//
