@@ -70,8 +70,6 @@ void writePythiaStreamIO() {
 	// write the line that defines the beginning of a GenEvent block
 	HepMC::write_HepMC_IO_block_begin( ascii_io );
 	//
-	HepMC::GenCrossSection xs;
-	//
 	//........................................EVENT LOOP
 	for ( int i = 1; i <= 100; i++ ) {
 	    if ( i%50==1 ) std::cout << "Processing Event Number " 
@@ -88,8 +86,7 @@ void writePythiaStreamIO() {
 	    // set number of multi parton interactions
 	    evt->set_mpi( pypars.msti[31-1] );
 	    // set cross section information
-	    xs.set_cross_section( pyint5.xsec[2][0] );
-	    evt->set_cross_section( xs );
+	    evt->set_cross_section( getPythiaCrossSection() );
 	    // write the event out to the ascii files
 	    ascii_io << (*evt);;
 	    // we also need to delete the created event from memory
