@@ -7,7 +7,9 @@
       * src/GenVertex.cc, GenParticle.cc: save and restore output stream state
         when calling print methods
 	
-      * examples: Calculate Pythia and Herwig cross sections.
+      * examples: Calculate Pythia and Herwig cross sections using
+        getPythiaCrossSection from examples/PythiaHelper.h and 
+	getHerwigCrossSection from examples/HerwigHelper.h.
         Set the units explicitly.
       * test/testHepMC.cc.in: call write_cross_section()
 
